Fixing alignment issues in About

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -5,7 +5,7 @@
   }
   
   .profile {
-    max-width: 24em;
+    max-width: auto;
   }
   
   .my-details {
